change name and add author

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 2,
 
-  "name": "PT format",
+  "name": "Pivotal tasks formatter",
   "description": "Copy formated Pivotaltracker task to clipboard, e.g. [PT 123456789] Some story name",
   "version": "1.0",
+  "author": "Jarek Pelczynski"
 
   "content_scripts": [
     {
