fix manifest json format

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -4,7 +4,7 @@
   "name": "Pivotal tasks formatter",
   "description": "Copy formated Pivotaltracker task to clipboard, e.g. [PT 123456789] Some story name",
   "version": "1.0",
-  "author": "Jarek Pelczynski"
+  "author": "Jarek Pelczynski",
 
   "content_scripts": [
     {
